--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,9 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Lookup (to) Heaven!</title>
+    <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="/css/styles.css">
+    <!-- BOOTSTRAP -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 </head>
 <body>
+    <nav id="navbar">
+
+        <a href="/" id="logo">
+            <img src="/img/logo.png" alt="Lookup2Heaven logo">
+        </a>
+
+        <ul>
+            <li><a href="/">Verses</a></li>
+            <li><a href="/login">Login</a></li>
+            <li><a href="/register">Register</a></li>
+        </ul>
+
+    </nav>
+
+    <div class="container">
     {{{body}}}
+    </div>
+    <footer>
+        <p><span>MiguelProgramas</span> &copy; 2025</p>
+    </footer>
 </body>
 </html>
