--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,12 +8,20 @@
     <link rel="stylesheet" href="/css/styles.css">
     <!-- BOOTSTRAP -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
+    <!-- FONTS -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merienda:wght@300..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <nav id="navbar">
+        
 
         <a href="/" id="logo">
-            <img src="/img/logo.png" alt="Lookup2Heaven logo">
+            <div id="images-nav">
+            <img src="/img/logo-no-background.png" alt="Lookup2Heaven logo">
+            <img src="/img/logo.png" id="upper" alt="Lookup2Heaven logo 2">
+            </div>
         </a>
 
         <ul>
