--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -25,9 +25,9 @@
         </a>
 
         <ul>
-            <li><a href="/">Verses</a></li>
-            <li><a href="/login">Login</a></li>
-            <li><a href="/register">Register</a></li>
+            <li><a href="/"><h3>Verses</h3></a></li>
+            <li><a href="/login"><h3>Login</h3></a></li>
+            <li><a href="/register"><h3>Register</h3></a></li>
         </ul>
 
     </nav>
