:sparkles: Added initial register page.

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -24,6 +24,10 @@
             </div>
         </a>
 
+        <span><p>Lookup</p><p> (to) </p><p> Heaven!</p></span>
+
+        <hr>
+
         <ul>
             <li><a href="/"><h3>Verses</h3></a></li>
             <li><a href="/login"><h3>Login</h3></a></li>
