:sparkles: Added register form message.

--- a/views/auth/register.handlebars
+++ b/views/auth/register.handlebars
@@ -13,22 +13,22 @@
 
         <div class="form-section">
 
-            <label for="name">E-mail:</label>
-            <input type="text" name="name" placeholder="Please insert your e-mail!" required>
+            <label for="email">E-mail:</label>
+            <input type="text" name="email" placeholder="Please insert your e-mail!" required>
 
         </div>
 
         <div class="form-section">
 
-            <label for="name">Password:</label>
-            <input type="text" name="name" placeholder="Please insert your password!" required>
+            <label for="password">Password:</label>
+            <input type="text" name="password" placeholder="Please insert your password!" required>
 
         </div>
 
         <div class="form-section">
 
-            <label for="name">Password confirmation:</label>
-            <input type="text" name="name" placeholder="Please confirm your password!" required>
+            <label for="passwordconfirmation">Password confirmation:</label>
+            <input type="text" name="passwordconfirmation" placeholder="Please confirm your password!" required>
 
         </div>
 
