--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -199,3 +199,16 @@ form input[type="submit"]:hover {
     text-decoration: none;
 
 }
+
+#flash {
+
+    color: white;
+    background-color:rgb(8, 97, 124);
+    padding: 1em;
+    text-align: center;
+    border: 1px solid rgb(0, 195, 255);
+    border-radius: 5px;
+    max-width: 60%;
+    margin: 0 auto 1em
+
+}
