:sparkles: Added login functionalities.

--- a/views/auth/login.handlebars
+++ b/views/auth/login.handlebars
@@ -1,1 +1,22 @@
-<h1>Logging in...</h1>
+<div class="auth-container">
+
+    <h1>Logging in...?</h1>
+    <form action="/login" method="post">
+    
+        <div class="form-section">
+            <label for="email">E-mail:</label>
+            <input type="email" name="email" placeholder="Insert your e-mail here!">
+        </div>
+
+        <div class="form-section">
+            <label for="email">Password</label>
+            <input type="password" name="password" placeholder="Insert your password here!">
+        </div>
+
+        <input type="submit" value="Login!">
+
+        <p>Would like to <a href="/register">create </a>an account instead?</p>
+    
+    </form>
+
+</div>
