:zap: Authentication improved and completed.

--- a/views/auth/login.handlebars
+++ b/views/auth/login.handlebars
@@ -5,12 +5,12 @@
     
         <div class="form-section">
             <label for="email">E-mail:</label>
-            <input type="email" name="email" placeholder="Insert your e-mail here!">
+            <input type="email" name="email" placeholder="Insert your e-mail here!" required>
         </div>
 
         <div class="form-section">
             <label for="email">Password</label>
-            <input type="password" name="password" placeholder="Insert your password here!">
+            <input type="password" name="password" placeholder="Insert your password here!" required>
         </div>
 
         <input type="submit" value="Login!">
