--- a/views/auth/register.handlebars
+++ b/views/auth/register.handlebars
@@ -14,21 +14,21 @@
         <div class="form-section">
 
             <label for="email">E-mail:</label>
-            <input type="text" name="email" placeholder="Please insert your e-mail!" required>
+            <input type="email" name="email" placeholder="Please insert your e-mail!" required>
 
         </div>
 
         <div class="form-section">
 
             <label for="password">Password:</label>
-            <input type="text" name="password" placeholder="Please insert your password!" required>
+            <input type="password" name="password" placeholder="Please insert your password!" required>
 
         </div>
 
         <div class="form-section">
 
             <label for="passwordconfirmation">Password confirmation:</label>
-            <input type="text" name="passwordconfirmation" placeholder="Please confirm your password!" required>
+            <input type="password" name="passwordconfirmation" placeholder="Please confirm your password!" required>
 
         </div>
 
