--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -32,7 +32,7 @@
             <li><a href="/"><h3>Verses</h3></a></li>
 
             {{#if session.userid}}
-                <li><a href="/dashboard"><h3 id="biggest">Share a verse!</h3></a></li>
+                <li><a href="/verses/dashboard"><h3 id="biggest">Share a verse!</h3></a></li>
                 <li><a href="/logout"><h3>Logout</h3></a></li>
             {{else}}
 
