:sparkles: Added authentication helper.

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -67,6 +67,12 @@
             </div>
         {{/if}}
 
+        {{#if timedOut}}
+            <div id="flash">
+                <p>This session has timed out! Sorry, but you have to login again!</p>
+            </div>
+        {{/if}}
+
 
     {{{body}}}
     </div>
