:lipstick: Generally improved dashboard styling.

--- a/views/verses/dashboard.handlebars
+++ b/views/verses/dashboard.handlebars
@@ -2,7 +2,7 @@
 
     <div class="title">
         <h1>Sharing a verse?</h1>
-        <a href="verses/add" class="button">Share a verse</a>
+        <a href="/verses/add" class="button"><p>Add a verse!</p></a>
     </div>
 
     <h2>Here are the verses currently added by you:</h2>
