--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -253,35 +253,65 @@ form input[type="submit"]:hover {
 
 .button {
 
-    background-color: rgb(8, 97, 124);
+    background-color: rgb(14, 93, 146);
     color: white;
-    border: 2px solid rgb(7, 63, 80);
-    padding: .5em 1.4em;
-    font-size: 2em;
+    border: 2px solid rgb(0, 0, 0);
+    padding: .3em .7em;
+    font-size: 1.5em;
     font-weight: bold;
     border-radius: 5px;
     cursor: pointer;
     text-decoration: none;
     transition: .5s;
-    width: 10em;
+    width: 50%;
 
 }
 
 .button:hover {
 
-    color: yellow;
+    background-color: rgb(22, 155, 243);
+    color: black;
+
+}
+
+.button p {
+
+    text-align: center;
+    background-color: transparent;
+
+}
+
+.title a {
+
+    margin-left: 2.2em
 
 }
 
 .title {
 
     height:8em;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 
 }
 
 .title h1 {
 
     margin-bottom: 1em;
+    border-bottom: 1px solid rgb(8, 97, 124);
+    border-right: none;
+    width: 10em;
+    padding-bottom: .5em;
+
+}
+
+.dashboard {
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 
 }
 
