:sparkles: Implemented form sample verses.

--- a/views/verses/add.handlebars
+++ b/views/verses/add.handlebars
@@ -8,7 +8,7 @@
         <div class="form-section">
     
             <label for="title">Type your verse here:</label>
-            <input type="text" name="title" placeholder="'For he will deliver you from the snare of the fowler.' (Psalms 91:3)">
+            <input type="text" name="title" placeholder="'{{line}}'">
 
         </div>
 
