--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -20,11 +20,11 @@ h1 {
 
     text-align: center;
     color: rgb(8, 97, 124);
-    border-right: 1px solid rgb(0, 195, 255);
-    margin-right: 1em;
     min-width: 200px;
 
 }
+
+
 
 #logo img {
 
@@ -163,6 +163,13 @@ footer p {
     max-width: 450px;
     display: flex;
     align-items: center;
+
+}
+
+.auth-container h1 {
+
+    border-right: 1px solid rgb(0, 195, 255);
+    margin-right: 1em;
 
 }
 
