:sparkles: Added dashboard verse retrieval.

--- a/views/verses/add.handlebars
+++ b/views/verses/add.handlebars
@@ -8,7 +8,7 @@
         <div class="form-section">
     
             <label for="title">Type your verse here:</label>
-            <input type="text" name="title" placeholder="'{{line}}'">
+            <input type="text" name="title" placeholder="'{{line}}'" required>
 
         </div>
 
