--- a/views/verses/dashboard.handlebars
+++ b/views/verses/dashboard.handlebars
@@ -7,4 +7,14 @@
 
     <h2>Here are the verses currently added by you:</h2>
 
+    <ul>
+
+        {{#each verses}}
+
+            <li>{{this.title}}</li>
+
+        {{/each}}
+
+    </ul>
+
 </div>
