--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -25,7 +25,7 @@
             </div>
         </a>
 
-        <span><p>Lookup</p><p> (to) </p><p> Heaven!</p></span>
+        <span><p class="blue-p">Lookup</p><p> (to) </p><p class="blue-p"> Heaven!</p></span>
 
         <hr>
 
