--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -351,6 +351,7 @@ form input[type="submit"]:hover, .btn {
     font-weight: bold;
     color: rgb(16, 110, 173);
     margin-right: 2em;
+    min-width:50%;
 
 
 }
@@ -365,6 +366,12 @@ form input[type="submit"]:hover, .btn {
 .dashboard .actions .btn {
 
     margin: 0 0.5em;
+
+}
+
+.dashboard .actions a {
+
+    min-width: 5em;
 
 }
 
