--- a/views/verses/dashboard.handlebars
+++ b/views/verses/dashboard.handlebars
@@ -18,7 +18,7 @@
 
                     <a href="/" class="btn">Edit verse</a>
 
-                    <form action="/">
+                    <form action="/verses/remove" method="post">
                     
                         <input type="hidden" name="id" value="{{this.id}}">
                         <input type="submit" value="Delete" class="btn">
