--- a/views/verses/dashboard.handlebars
+++ b/views/verses/dashboard.handlebars
@@ -33,4 +33,10 @@
 
     </ul>
 
+    {{#if noVerses}}
+
+            <p>It seems you have not added any verses to the community tab yet. Should you wish to change that, <a href="/verses/add">click here!</a></p>
+
+    {{/if}}
+
 </div>
