--- a/views/verses/dashboard.handlebars
+++ b/views/verses/dashboard.handlebars
@@ -16,7 +16,7 @@
                 <span class="label">{{this.title}}</span>
                 <span class="actions">
 
-                    <a href="/" class="btn">Edit verse</a>
+                    <a href="/verses/edit/{{this.id}}" class="btn">Edit verse</a>
 
                     <form action="/verses/remove" method="post">
                     
