:lipstick: Styled home's verses tab.

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -381,6 +381,121 @@ form input[type="submit"]:hover, .btn {
 
 }
 
+#home-header {
+
+    display: flex;
+    text-align: center;
+    flex-direction: column;
+    max-width: 60%;
+    margin: 0 auto;
+
+}
+
+#home-header h1 {
+
+    margin-bottom: 1em;
+
+}
+
+#home-header span {
+
+    color: rgb(16, 110, 173);
+    font-weight: bold;
+
+}
+
+#home-header p, #home-header form {
+
+    margin-bottom: 1.2em;
+
+}
+
+#home-header input[type="text"] {
+
+    border: none;
+    border-bottom: 1px solid rgb(8, 97, 124);
+    width: 60%;
+    padding: .5em;
+    margin-right: 1em;
+    transition: .5s;
+
+}
+
+#home-header input[type="text"]:hover {
+
+    box-shadow: 2px 2px 26px 2px rgb(16, 110, 173);
+
+}
+
+#order-container {
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 80%;
+    margin: 0 auto 1em;
+
+}
+
+#order-container form {
+
+    margin: 0;
+
+}
+
+#order-container a {
+
+    color: black;
+
+}
+
+#order-container button {
+
+    margin-bottom: 0;
+    border: none;
+    cursor: pointer;
+
+}
+
+#order-container button:hover,
+#order-container i:hover,
+#order-container a:hover {
+
+    color: rgb(16, 110, 173)
+
+}
+
+#order-container button,
+#order-container i,
+#order-container a {
+
+    margin: 0 4px;
+
+}
+
+#verses-container figure {
+
+    border-bottom: 1px solid rgb(16, 110, 173);
+    padding: .5em;
+    max-width: 50%;
+    margin: 0 auto 1em;
+
+}
+
+#verses-container blockquote {
+
+    font-style: italic;
+    font-size: 1.5em;
+    margin-bottom: .4em;
+
+}
+
+#verses-container span {
+
+    color: rgb(8, 97, 124);
+
+}
+
 #logoutQ {
 
     display: none;
