--- a/views/verses/home.handlebars
+++ b/views/verses/home.handlebars
@@ -18,7 +18,7 @@
             <input type="hidden" name="search" value="{{this.search}}">
             <input type="hidden" name="order" value="new">
 
-            <button type="submit"><i class="bi bi-arrow-up"></i></button>
+            <button type="submit"><i class="bi bi-arrow-up"></i> (Newest)</button>
 
         </form>
 
@@ -27,7 +27,7 @@
             <input type="hidden" name="search" value="{{this.search}}">
             <input type="hidden" name="order" value="old">
 
-            <button type="submit"><i class="bi bi-arrow-down"></i></button>
+            <button type="submit"><i class="bi bi-arrow-down"></i> (Oldest)</button>
 
         </form>
 
