:sparkles: Added flash edit shortcut.

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -75,6 +75,14 @@
             </div>
         {{/if}}
 
+        {{#if verseId}}
+
+            <div id="flash">
+                <p>Verse shared succesfully! Thanks for your <a style="text-decoration:underline" href="/verses/edit/{{verseId}}">contribution!</a></p>
+            </div>
+
+        {{/if}}
+
     {{{body}}}
     </div>
     <footer>
