--- a/views/auth/login.handlebars
+++ b/views/auth/login.handlebars
@@ -1,22 +1,44 @@
 <div class="auth-container">
 
-    <h1>Logging in...?</h1>
-    <form action="/login" method="post">
-    
-        <div class="form-section">
-            <label for="email">E-mail:</label>
-            <input type="email" name="email" placeholder="Insert your e-mail here!" required>
+    {{#if alreadyLogged}}
+
+    <div id="alreadyLogged">
+
+        <h1>Logging in...?</h1>
+
+        <div>
+
+            <h2>But, you're already <span>logged!</span></h2>
+
+            <p>Here's a <a href="/verses/dashboard">link to the dashboard!</a></p>
+
         </div>
 
-        <div class="form-section">
-            <label for="email">Password</label>
-            <input type="password" name="password" placeholder="Insert your password here!" required>
-        </div>
+    </div>
 
-        <input type="submit" value="Login!">
 
-        <p>Would like to <a href="/register">create </a>an account instead?</p>
-    
-    </form>
+    {{else}}
+
+        <h1>Logging in...?</h1>
+
+        <form action="/login" method="post">
+        
+            <div class="form-section">
+                <label for="email">E-mail:</label>
+                <input type="email" name="email" placeholder="Insert your e-mail here!" required>
+            </div>
+
+            <div class="form-section">
+                <label for="email">Password</label>
+                <input type="password" name="password" placeholder="Insert your password here!" required>
+            </div>
+
+            <input type="submit" value="Login!">
+
+            <p>Would like to <a href="/register">create </a>an account instead?</p>
+        
+        </form>
+
+    {{/if}}
 
 </div>
